--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -2,10 +2,17 @@
 
 *, *::before, *::after {
       box-sizing: border-box;
-      /* font-family: 'Roboto', sans-serif; */
   }
 
-body {
+  html, body{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+  }
+
+/* body {
       min-height: 812px;
       min-width: 100vw;
       margin: 0;
@@ -15,6 +22,11 @@ body {
       background-repeat: no-repeat;
       background-size: cover;
       overflow: hidden;
+  } */
+  
+  body {
+      font-family: 'Roboto', sans-serif;
+      font-size: 1rem;
   }
   
 .row{
@@ -28,21 +40,34 @@ body {
       margin-top: .7rem;
 }
 
-.container{
+/* .container{
       margin: auto;
       width:  90%;
       padding: 1rem 0 0 0;
       min-width: 320px;
       max-width: 375px;
-      /* visibility: hidden; */
+      
+} */
+
+.container{
+      background-image: url(/static/assets/img/slate-bg-320.png);
+      background-repeat: no-repeat;
+      background-size: cover;
+      overflow: hidden;
+      height: 100vh;
+      padding: 1rem 1rem 0;
 }
 
 p, h3{
       margin: 0;
 }
 
+h1{
+      font-size: 1rem;
+}
+
       header{
-            margin-bottom: 3.2rem;
+            margin: auto 1rem;;
             color: #f3f3f3;
       }
 
@@ -50,10 +75,10 @@ p, h3{
                   align-self: center;
             }
 
-                  .header-logo p{
+                  .logo{
                         text-transform: uppercase;
                         color: #f3f3f3;
-                        font-weight: 500;
+                        font-weight: 700;
                         font-size: 13px;
                         margin-bottom: 1px;
                   }
@@ -65,7 +90,7 @@ p, h3{
             }
 
 .dashboard{
-      margin: auto;
+      margin: 2.5rem auto;
       max-width: 90%;
       background-image: linear-gradient(177deg, #FFFFFF 7%, rgba(217,210,226,0.14) 56%, #FFFFFF 95%);
       border-radius: 26.76px;
@@ -73,6 +98,7 @@ p, h3{
       backdrop-filter: blur(3px);
       -webkit-backdrop-filter: blur(3px);
 }
+
 
       .db-title{
             font-size: 16.08px;
@@ -193,13 +219,11 @@ p, h3{
                               padding: 8px 0px;
                         }
 
-                  .fa-home{
-                        color: #C0A4CB;
-                        border-bottom: 3px solid #C0A4CB; ;
-                  }             
 
-                   .fa-th-large, .fa-plus-square {
-                        color: #C9C7C7;
+                  .is-active{
+                        color: #C0A4CB;
+                        border-bottom: 3px solid #C0A4CB;
+
                   }
 
            
@@ -313,3 +337,151 @@ p, h3{
             font-size: 14px;
             padding: 1rem 3rem;
       }
+
+
+ /* ---------------------tables.html----------------------- */
+
+ .bg-style{
+      background-repeat: no-repeat;
+      background-size: cover;
+      overflow: hidden;
+      height: 100vh;
+
+
+ }
+ .container-primary{
+
+      background-image: url(/static/assets/img/slate-bg-320.png);
+      background-repeat: no-repeat;
+      background-size: cover;
+      overflow: hidden;
+      height: 100vh;
+
+ }
+
+ .container-overlay{
+
+      background-image: linear-gradient(178deg, rgba(255,255,255,0.89) 8%, rgba(235,231,240,0.99) 39%, rgba(217,210,226,0.14) 100%, rgba(243,243,243,0.00) 100%);
+      backdrop-filter: blur(3px);
+      -webkit-backdrop-filter: blur(3px);
+ 
+ }
+
+ .tables-wrapper{
+       padding: 1rem;
+ }
+
+ .data-reservations{
+       margin: 2rem 0;
+
+ }
+
+ .reservations{
+       margin-top: .25rem;
+       margin-bottom: .5rem;
+ }
+
+      #tableSelection{
+
+       overflow-y: auto;
+       height: 230px;
+       padding: 0 .5rem;
+
+      }
+
+
+      .res-position{
+            width: 12%;
+            border: 3px solid #8BB88A;
+            border-radius: 12.32px;
+            flex-grow: 1;
+            align-items: stretch;
+            text-align: center;
+            padding: 10px;
+            font-size: 24px;
+
+      }
+
+      .reservations .text-content{
+            align-self: flex-start;
+            width: 75%;
+            margin: .75rem 0 .5rem .75rem;
+      }
+
+      .reservations .data-title{
+            font-size: 13px;
+            letter-spacing: 0.71px;
+            margin-bottom: 2px;
+      }
+
+      .party{
+            margin-bottom: 0;
+            font-size: 10px
+      }
+
+      .data-waitlist{
+            margin: 4rem 0 1rem;
+      
+      }
+
+      .wait-data-list{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            width: 90%;
+            margin: 0 auto;
+      }
+
+
+      .wait-item{
+            background: rgba(255,255,255,0.69);
+            padding: .3rem .4rem;
+            margin: .2rem;
+            border-radius: 2px;
+            color: #918F8F;
+            font-size: 10px;
+            letter-spacing: 0.47px;
+      }
+
+      .wait-position{
+            margin-right: 1rem;
+      }
+
+      .button-container{
+            width: 100%;
+            position: absolute;
+            left: 0;
+            bottom: 15%;
+
+      }
+
+
+      #clear{
+            display: block;
+            width: 55%;
+            margin: 0 auto;
+            padding: 1rem 1.5rem;
+            background: #C0A4CB;
+            border-radius: 18.49px;
+            font-size: 10.08px;
+            text-align: center;
+            letter-spacing: 1.01px;
+            text-decoration: none;
+            text-transform: uppercase;
+            color: #F8F5F5; 
+        
+      }
+
+      .nav--tables{
+            opacity: 0.96;
+            background: #F8F7F6;
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+      }
+
+   
+    
+      
+
+   
