--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -17,17 +17,13 @@
   }
   
   body {
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Helvetica', sans-serif;
       font-size: 1rem;
   }
   
 .row{
       display: flex;
       justify-content: space-between;
-  }
-
-  .active{
-        color: white;
   }
 
 .db-data{
@@ -37,7 +33,12 @@
 
 
 .container{
-      background-image: url(/static/assets/img/slate-bg-320.png);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+
+      background-image: url(/static/assets/img/bg-orig.jpg);
       background-repeat: no-repeat;
       background-size: cover;
       overflow: hidden;
@@ -53,68 +54,76 @@ h1{
       font-size: 1rem;
 }
 
-      header{
-            margin: auto 1rem;;
-            color: #f3f3f3;
-      }
-
-            .header-logo{
-                  align-self: center;
-            }
-
-                  .logo{
-                        text-transform: uppercase;
-                        color: #f3f3f3;
-                        font-weight: 700;
-                        font-size: 13px;
-                        margin-bottom: 1px;
-                  }
-
-            .header-icon{
+            .edit-icon{
                   border: none;
                   background: none;
-                  color: #f3f3f3;
-                  margin-left: auto;
+                  margin-top: 1.25rem;
+                  padding: 0;
+            }
+
+            .edit-icon .far{
+                  color: #b18ac1;
+                  
             }
 
 
 
 .dashboard{
-      margin: 2rem auto;
+      
       padding: 0 0 1rem;
-      max-width: 99%;
-      background-image: linear-gradient(177deg, #FFFFFF 7%, rgba(217,210,226,0.14) 56%, #FFFFFF 95%);
-      border-radius: 15px;
+      width: 95%;
+      max-width: 300px;
+      height: 550px;
+      background: linear-gradient(177deg, #FFFFFF 7%, rgba(217,210,226,0.14) 56%, #FFFFFF 95%); 
+    border-radius: 25px;
       backdrop-filter: blur(3px);
       -webkit-backdrop-filter: blur(3px);
 }
 
 .db-content{
-      padding: 1.5rem 1rem;
+      padding: 1.5rem 1rem .75rem;
 }
 
 .nav {
       overflow: hidden;
+      position: absolute;
+      justify-content: space-evenly;
+      bottom: 1rem;
       padding: .5rem .75rem;
+      width: 100%;
+      margin: 0 auto;
       border: none;
-      background: #f3f3f3;
       border-radius: 26.76px;
-      border-radius: 15px 15px 0 0;
+      border-radius: 0 0 15px 15px;
       }
-            .tab-links{
+
+            /* .tab-links{
                   border: none;
                   background: none;
                   padding: .75rem .5rem;;
-                  width: 20%;
+                  margin: 0 1rem;
+                  width: 30%;
                   border-radius: 10px;
+            } */
+
+            .tab-links{
+             border: none;
+             padding: .75rem .75rem;
+            border-radius: 10px;
             }
 
             .fas{
                   color: #C9C7C7;
+                  padding-bottom: .25rem;
             }
 
              .active{
                         color:#C0A4CB;
+                        border-bottom: 2px solid #C0A4CB ;
+                  }
+
+             .active-click{
+                        color:white;
                   }
 
                
@@ -125,17 +134,17 @@ h1{
                         }
 
 
-      .db-title{
+      .db-title-home{
             font-size: 16.08px;
             color: #1E1B1B;
             letter-spacing: 0.71px;
             font-weight: 500;
-            margin-bottom: 1rem;
+            margin: 1rem 0 .5rem .5rem;
       }
 
       .data-primary{
             padding: 1px;
-            margin-top: .7rem;
+            margin-top: 2rem;
       }
 
       .date, .clock{
@@ -144,7 +153,7 @@ h1{
 
       .date{
             width: 35%;
-            padding: 1rem 0 0;
+            padding: .75rem;
       }
 
             #day-of-week{
@@ -181,15 +190,16 @@ h1{
             }
 
       .tertiary{
-            padding: .75rem 1rem .75rem .5rem;
+            padding: .75rem 1rem .25rem .5rem;
             align-items: center;   
             margin-top: .7rem;
       }
 
 
       .tertiary + .tertiary{
-            margin-bottom: .5rem;
+            margin-bottom: 1.75rem;
       }
+
                   .data-title{
                         font-size: 14px;
                         color: #191818;
@@ -200,6 +210,7 @@ h1{
                         font-size: 12px;
                         color: #636060;
                         letter-spacing: 0.71px;
+                        margin-top: .4rem;
                   }
 
                   .data-result-secondary{
@@ -207,7 +218,7 @@ h1{
                         font-weight: 500;
                         color: #b487c5;
                         letter-spacing: 0.71px;
-                        margin-top: 10px;
+                        margin-top: 1.25rem;
                   }
 
                   .icon{
@@ -235,16 +246,8 @@ h1{
                         text-align: center;
                         height: 60px;
                         width: 60px;
-                        box-shadow: rgb(23 109 47) 0px 10px 20px -10px;
                         border-radius: 100px;
                   }
-
-     
-
-
-             
-
-           
 
 
 /* ------------modal--------------- */
@@ -367,6 +370,11 @@ h1{
  /* ---------------------tables.html----------------------- */
 
 
+#db-tables{
+      background: linear-gradient(
+            177deg
+            , #FFFFFF 7%, rgba(225,225,229,0.5) 56%, #FFFFFF 90%);
+}
  .no-res-container{
       display:none;
       margin: 40% auto;
@@ -417,6 +425,12 @@ h1{
             border-radius: 13px;
        }
 
+       #db-tables .db-title{
+             margin-bottom: 1rem;
+             letter-spacing: 0.71px;
+             font-weight: 500;
+       }
+
        #tables-container{
             overflow: hidden;
             height: 155px;
@@ -448,7 +462,7 @@ h1{
                   }
 
                   .reservations .data-title{
-                        font-size: 13px;
+                        font-size: 12px;
                         letter-spacing: 0.71px;
                         overflow: auto;
                         white-space: nowrap;
@@ -458,7 +472,9 @@ h1{
 
                   .party{
                         margin-bottom: 0;
-                        font-size: 10px
+                        font-size: 9px;
+                        color: #636060;
+                        letter-spacing: 0.71px;
                   }
 
             .waitlist{
@@ -475,6 +491,13 @@ h1{
                         display: grid;
                         grid-template-columns: repeat(2, 1fr);
                   }
+
+                  .wait-empty{
+                        margin: 0 auto;
+                        color: lightgray;
+                  }
+
+            
                         .waitlist-item-container{
                               background: white;
                               margin: 2px;
@@ -482,7 +505,7 @@ h1{
                               font-size: 9px;
                               letter-spacing: 0.47px;
                               border-radius: 2px;
-                              padding: .25rem .35rem;
+                              padding: .4rem .35rem;
                         }
 
                         .tertiary .text-content{
@@ -507,13 +530,13 @@ h1{
 
       .button{
             display: block;
-            width: 60%;
+            width: 50%;
             max-width: 170px;
-            margin: 0 auto;
-            padding: 1rem .5rem;
+            margin: 2rem auto 0;
+            padding: 1rem .25rem;
             background: #C0A4CB;
             border-radius: 18.49px;
-            font-size: 10.08px;
+            font-size: 9px;
             text-align: center;
             letter-spacing: 1.01px;
             text-decoration: none;
@@ -543,9 +566,9 @@ h1{
             background: white;
             border-radius: 8px;
             min-height: 230px;
-            padding: 1rem 1.5rem 2rem;
-            width: 80%;
-            margin: 1.5rem auto;
+            padding: 1rem 1rem 2rem;
+            width: 85%;
+            margin: 4rem auto 2rem;
             box-shadow: rgba(186, 143, 186, 0.35) 0px 5px 15px;
       }
             .form > .data-title{
@@ -628,9 +651,16 @@ h1{
 
                        
       
-                  
+                  /*---------------- Media Queries----------*/
    
-    
-      
+                  @media only screen and (min-width: 425px) {
+                  
+                       
+                        .container{
+                             background-image: none;
+                             background: #C0A4CB;
+                        }
+                      }
+                       
 
    
