--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -306,18 +306,18 @@ h1{
             margin: 15px 0;
       }
 
-      .input-container{
+      .edit-capacity-container{
             margin: 1.25rem 0;
             padding: 0 1rem;
             text-align: center;
 
       }
       
-            .input-content{
+            .capacity-content{
                   width: 45%;
             }
 
-                  .input-content label{
+                  .capacity-content label{
                         font-size: 10px;
                   
                   }
@@ -341,8 +341,9 @@ h1{
 
             }
 
-            input::placeholder {
-                  color: lightgray
+            .limit-input::placeholder {
+                  color: lightgray;
+                  font-size: 24px;
                 }
 
             input:focus::placeholder {
@@ -442,11 +443,12 @@ h1{
                   margin-bottom: .20rem;
                   position: relative;
                   margin: 0 0 4px;
+                  padding-right: 0.5rem;
             }
 
                   .reservations .text-content{
                         align-self: flex-start;
-                        width: 77%;
+                        width: 45%;
                         padding: .6rem 0;
                   }
 
@@ -477,6 +479,29 @@ h1{
                         letter-spacing: 0.71px;
                   }
 
+                  .table-edit{
+                        align-self: center;
+                  }
+
+                  .table-edit button{
+                        border: none;
+                        background:none;
+                       
+                  }
+
+                  .table-edit .far{
+                        color: #9b9797;
+                        padding: .25rem;
+                  }
+
+                  .fa-times-circle:hover{
+                        color: rgb(205, 75, 75);
+                  }
+
+                  .fa-check-circle:hover{
+                        color:#b1d8b8;
+                  }
+
             .waitlist{
                   margin: .75rem 0 1rem;
             
@@ -484,7 +509,7 @@ h1{
       
                   .waitlist-data{
                         width: 95%;
-                        max-height: 80px;
+                        max-height: 55px;
                         margin: 0 auto;
                         overflow-y: auto;
                         white-space: nowrap;
@@ -496,6 +521,10 @@ h1{
                         margin: 0 auto;
                         color: lightgray;
                   }
+
+                  body::-webkit-scrollbar {
+                        width: 5px;               /* width of the entire scrollbar */
+                      }
 
             
                         .waitlist-item-container{
@@ -639,6 +668,10 @@ h1{
                               color: #f3f3f3;
                               font-size: 12px;
                               transition: background 0.1s;
+                        }
+
+                        .submit-form:hover{
+                              background:#828282;
                         }
 
                         .empty{
