--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -5,8 +5,7 @@
   }
 
   html, body{
-    width: 100%;
-    height: 100%;
+
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
@@ -19,6 +18,10 @@
   body {
       font-family: 'Helvetica', sans-serif;
       font-size: 1rem;
+      background-image: url(/static/assets/img/bg-orig.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      overflow: hidden;
   }
   
 .row{
@@ -36,14 +39,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-
-
-      background-image: url(/static/assets/img/bg-orig.jpg);
-      background-repeat: no-repeat;
-      background-size: cover;
-      overflow: hidden;
       height: 100vh;
-      padding: 1rem 1rem 0;
+      padding: .5rem;
 }
 
 p, h3{
@@ -74,6 +71,7 @@ h1{
       width: 95%;
       max-width: 300px;
       height: 550px;
+      margin-bottom: 10px;
       background: linear-gradient(177deg, #FFFFFF 7%, rgba(217,210,226,0.14) 56%, #FFFFFF 95%); 
     border-radius: 25px;
       backdrop-filter: blur(3px);
@@ -86,7 +84,6 @@ h1{
 
 .nav {
       overflow: hidden;
-      /* position: absolute; */
       justify-content: space-evenly;
       bottom: 1rem;
       padding: .5rem .75rem;
@@ -96,23 +93,13 @@ h1{
       border-radius: 26.76px;
       border-radius: 0 0 15px 15px;
       }
-
-            /* .tab-links{
-                  border: none;
-                  background: none;
-                  padding: .75rem .5rem;;
-                  margin: 0 1rem;
-                  width: 30%;
-                  border-radius: 10px;
-            } */
-
             .tab-links{
              border: none;
              padding: .75rem .75rem;
             border-radius: 10px;
             }
 
-            .fas{
+             .tab-links .fas{
                   color: #C9C7C7;
                   padding-bottom: .25rem;
             }
@@ -419,6 +406,11 @@ h1{
        margin: 0 2px;
        height: 18px;
        width: 20px;
+       color: white;
+ }
+
+ .slider-buttons .fas:hover{
+       color:  #C0A4CB;
  }
 
  
@@ -448,8 +440,8 @@ h1{
 
                   .reservations .text-content{
                         align-self: flex-start;
-                        width: 45%;
-                        padding: .6rem 0;
+                        width: 50%;
+                        padding: .6rem .25rem;;
                   }
 
                   .res-position{
@@ -481,6 +473,7 @@ h1{
 
                   .table-edit{
                         align-self: center;
+                        width: 25%;
                   }
 
                   .table-edit button{
@@ -491,7 +484,6 @@ h1{
 
                   .table-edit .far{
                         color: #9b9797;
-                        padding: .25rem;
                   }
 
                   .fa-times-circle:hover{
@@ -549,24 +541,24 @@ h1{
 
       .button-container{
             width: 100%;
-            margin: 2rem auto 0;
+            margin: 0 auto;
       }
 
       .button{
             display: block;
             width: 50%;
             max-width: 170px;
-            margin: 2rem auto 0;
-            padding: 1rem .25rem;
+            padding: .85rem .3rem;
             background: #C0A4CB;
-            border-radius: 18.49px;
+            border-radius: 15px;
             font-size: 9px;
             text-align: center;
             letter-spacing: 1.01px;
             text-decoration: none;
             text-transform: uppercase;
-            color: #F8F5F5; 
+            color: #F8F5F5;
             border: none;
+        }
 
       }
 
@@ -676,7 +668,7 @@ h1{
                   @media only screen and (min-width: 425px) {
                   
                        
-                        .container{
+                        body{
                              background-image: none;
                              background: #C0A4CB;
                         }
